--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             width: 40%;
             text-align: left;
             display: block;
-            color: black;
+            color: white;
             font-family: monospace;
         }
     </style>
